# gene-expression-cancer-classification

./: .gitignore  README.md  classical_models.py  data_preparation.py  evaluation_utils.py  exploratory_gene_expression_analysis.ipynb  plotting_utils.py  pyproject.toml  requirements.txt  run_classical_models.py
docs/: dataset.md  methods.md  usage.md
examples/: toy_gene_expression.csv
src/gene_expression_cancer_classification/: __init__.py  cli.py  data_preparation.py  evaluation.py  models.py  plotting.py
tests/: test_classical_models.py  test_cli.py  test_data_preparation.py  test_evaluation_utils.py  test_plotting_utils.py  test_run_classical_models.py
