[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gene-expression-cancer-classification"
version = "0.1.0"
description = "A small scientific Python project for cancer classification from gene expression data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
gene-cancer-classify = "gene_expression_cancer_classification.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
